# vite_react_ts_with_python_backend

./: LICENSE  README.md  generate_client_code.bash  openapi.yaml
be/: pyproject.toml  setup.cfg
be/be/: app.py  routers.py
be/scripts/: generate_openapi.py  run_server.py
fe/: .eslintrc.yml  package-lock.json  package.json  vite.config.ts
fe/src/: App.tsx  main.tsx  store.ts
fe/src/apps/: App.tsx
fe/src/client/: runtime.ts
fe/src/client/.openapi-generator/: FILES
fe/src/client/apis/: DefaultApi.ts
fe/src/client/models/: Response.ts  ResponseModel.ts  index.ts
fe/src/components/: BoldBox.tsx  ExtendedBox.tsx  StyledAppBar.tsx
fe/src/pages/: BoxExample.tsx  NotFound.tsx  ReduxExample.tsx
fe/src/slices/: counterSlices.ts  rootReducer.ts
